# SQL-Agent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.local-llm  README.md  docker-compose.yml  pyproject.toml
deploy/: prometheus.yml
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  pvc.yaml  qdrant.yaml  secret.example.yaml  service.yaml  servicemonitor.yaml  statefulset-writer.yaml
scripts/: generate_sbom.py  grpc_client_demo.py  pin_base_digests.py  render_k8s.py  run_grpc_server.py
sql_agent/: .env.example  __init__.py  main.py  request_context.py  seed_demo.py
sql_agent/agents/: __init__.py  analysis_agent.py  data_agent.py  datetime_agent.py  intent_agent.py  memory_agent.py  orchestrator.py  param_builder_agent.py  schema_agent.py  tool_selection_agent.py  validation_agent.py  visualization_agent.py
sql_agent/config/: __init__.py  logging.py  settings.py
sql_agent/grpc_server/: __init__.py  interceptors.py  server.py  sql_agent.proto  sql_agent_pb2.py  sql_agent_pb2_grpc.py
sql_agent/llm_serving/: __init__.py  base.py  hardware.py  hf_embedder.py  hf_provider.py  mock_embedder.py  mock_provider.py  openai_embedder.py  openai_provider.py  registry.py
sql_agent/models/: __init__.py  graph_state.py  intent.py  tool_schemas.py
sql_agent/observability/: __init__.py  metrics.py  rotating_jsonl.py  structured_logging.py  tracing.py
sql_agent/routing/: __init__.py  base.py  circuit_breaker.py  decision_log.py  deterministic.py  router.py  weighted.py
sql_agent/services/: __init__.py  db.py  llm.py  memory_manager.py  schema_cache.py
sql_agent/services/memory_store/: __init__.py  base.py  factory.py  faiss_backend.py  qdrant_backend.py
sql_agent/tools/: __init__.py  base.py  count_tool.py  data_cleaning.py  data_fetch.py  data_preview.py  datetime_handling.py  listing_tool.py  query_validation.py  schema_discovery.py  statistical_analysis.py  table_relationship.py  visualization.py
sql_agent/tracking/: __init__.py  base.py  file_tracker.py  mlflow_tracker.py  noop_tracker.py  registry.py
sql_agent/ui/: app.py  chat_history.py  sidebar.py
tests/: conftest.py  test_docker.py  test_embedding_and_memory.py  test_grpc_smoke.py  test_hf_provider.py  test_k8s.py  test_llm_serving.py  test_memory_store.py  test_observability.py  test_phase8_grpc_surface.py  test_phase8_observability.py  test_phase8_routing.py  test_provider_integration.py  test_real_model.py  test_routing.py  test_tracking.py
